out/production/Jnotebook/batch/error_Helo.txt
Helo.java:2: error: class abc is public, should be declared in a file named abc.java
 public class abc{ 
        ^
1 error
